[package]
name = "antlr4rust"
version = "0.6.0"
authors = ["Konstantin Anisimov <rrevenantt@gmail.com>", "Alex Snaps <alex@wcgw.dev>"]
homepage = "https://github.com/antlr4rust/antlr4"
repository = "https://github.com/antlr4rust/antlr4"
documentation = "https://docs.rs/antlr4rust"
description = "ANTLR4 runtime for Rust"
readme = "README.md"
edition = "2021"
rust-version = "1.80"
license = "BSD-3-Clause"
keywords = ["ANTLR","ANTLR4","parsing","runtime"]
categories = ["parsing"]
exclude = ["/build.rs","/grammars","/templates"]

[features]
debug = []

[dependencies]
lazy_static = "^1.4"
